--- a/pos.css
+++ b/pos.css
@@ -1,55 +1,75 @@
-*{
-	box-sizing: border-box;
+* {
+  box-sizing: border-box;
 }
 
-html, body{
-	height: 100%;
-	width:  100%;
-	font-family: Helvetica, Arial, sans-serif;
-	font-size: 100%;
+html, body {
+  height: 100%;
+  width: 100%;
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 100%;
 }
 
-h1{
-	margin: 1rem 0;
+h1 {
+  margin: 1rem 0;
 }
 
-section{
-
-	border-bottom: 1px solid #000;
+section {
+  border-bottom: 1px solid #000;
 }
 
-.wrapper{
-	max-width: 600px;
-	margin: 0 auto;
-	min-height: 300px;
+.wrapper {
+  max-width: 600px;
+  margin: 0 auto;
+  min-height: 300px;
 }
 
-.row{
-	width:  100%;
-	padding: 1rem 0;
-	min-height: 300px;
+.row {
+  display: flex;
+  width: 100%;
+  padding: 1rem 0;
+  min-height: 300px;
+  flex-wrap: wrap;
+}
+
+.col {
+  width: 100%;
+  margin: 10px;
+  min-height: 50px;
+}
+
+.trolley-grey {
+  background: #7D7C84;
+}
+
+.sea-green {
+  background: #2D93AD;
+}
+
+.orange {
+  background: orange
+}
+
+.pink {
+  background: pink
+}
+
+.middle-red {
+  background: #DE8F6E;
+}
+
+.black {
+  background: #000;
 }
 
 
+@media (min-width: 768px){
+	.col{
+	  flex: 1 1 calc(50% - 20px);
+	}
+
+}
+@media (min-width: 1024px){
 .col{
-	width: 50px;
-	min-height: 50px;
+	flex: 1 1 calc(33% - 20px);
 }
-
-.trolley-grey{
-	background: #7D7C84;
-}
-
-.sea-green{
-	background: #2D93AD;
-
-}
-
-.middle-red{
-	background: #DE8F6E;
-
-}
-
-.black{
-	background: #000;
 }
